Closed Bug 1689327 Opened 5 years ago Closed 5 years ago

Themed resizer incorrectly being used for unthemed elements.

Categories

(Core :: CSS Parsing and Computation, defect)

defect

Tracking

()

RESOLVED FIXED
87 Branch
Tracking Status
firefox87 --- fixed

People

(Reporter: emilio, Assigned: emilio)

References

Details

Attachments

(1 file, 1 obsolete file)

No description provided.

Right now the resizer inside a random <div style="overflow: hidden"> is
the themed one, and that seems unintended.

I'm not sure how to best test this since resizers are sized to a
scrollbar width, so I can't just position an <img src=resizer.svg>.

I noticed this while looking at bug 1689253.

Right now the resizer inside a random <div style="overflow: hidden"> is
the themed one, and that seems unintended.

I'm not sure how to best test this since resizers are sized to a
scrollbar width, so I can't just position an <img src=resizer.svg>.

I noticed this while looking at bug 1689253.

Severity: -- → S3
Attachment #9199765 - Attachment is obsolete: true

There's a r+ patch which didn't land and no activity in this bug for 2 weeks.
:emilio, could you have a look please?
For more information, please visit auto_nag documentation.

Flags: needinfo?(enndeakin)
Flags: needinfo?(emilio)

We're focusing on enabling the non-native theme which doesn't have this issue. But I guess I could land this.

Flags: needinfo?(enndeakin)
Flags: needinfo?(emilio)
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/ed6dc41378b3 Resizers for non-themed scrollable content shouldn't be themed. r=NeilDeakin
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 87 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: