Bug 1689327 - Resizers for non-themed scrollable content shouldn't be themed. r=NeilDeakin

Right now the resizer inside a random <div style="overflow: hidden"> is
the themed one, and that seems unintended.

I'm not sure how to best test this since resizers are sized to a
scrollbar width, so I can't just position an <img src=resizer.svg>.

I noticed this while looking at bug 1689253.

Differential Revision: https://phabricator.services.mozilla.com/D103304