widget/nsNativeTheme.cpp
@@ -192,7 +192,9 @@ bool nsNativeTheme::IsWidgetStyled(nsPresContext* aPresContext,
                                    nsIFrame* aFrame,
                                    StyleAppearance aAppearance) {
   // Check for specific widgets to see if HTML has overridden the style.
-  if (!aFrame) return false;
+  if (!aFrame) {
+    return false;
+  }
 
   // Resizers have some special handling, dependent on whether in a scrollable
   // container or not. If so, use the scrollable container's to determine
@@ -204,12 +206,18 @@ bool nsNativeTheme::IsWidgetStyled(nsPresContext* aPresContext,
     if (parentFrame && parentFrame->IsScrollFrame()) {
       // if the parent is a scrollframe, the resizer should be native themed
       // only if the scrollable area doesn't override the widget style.
+      //
+      // note that the condition below looks a bit suspect but it's the right
+      // one. If there's no valid appearance, then we should return true, it's
+      // effectively the same as if it had overridden the appearance.
       parentFrame = parentFrame->GetParent();
-      if (parentFrame) {
-        return IsWidgetStyled(
-            aPresContext, parentFrame,
-            parentFrame->StyleDisplay()->EffectiveAppearance());
+      if (!parentFrame) {
+        return false;
       }
+      auto parentAppearance =
+          parentFrame->StyleDisplay()->EffectiveAppearance();
+      return parentAppearance == StyleAppearance::None ||
+             IsWidgetStyled(aPresContext, parentFrame, parentAppearance);
     }
   }
 
